fixed horizontal page overflow

--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -4,10 +4,9 @@
     src: url('Lucian Schoenschrift CAT-webfont.eot?#iefix') format('embedded-opentype'),
          url('Lucian Schoenschrift CAT-webfont.woff2') format('woff2'),
          url('Lucian Schoenschrift CAT-webfont.woff') format('woff'),
-         url('Lucian Schoenschrift CAT-webfont.ttf') format('truetype'),
-         url('Lucian Schoenschrift CAT-webfont.svg#lucien_schoenschriftv_catRg') format('svg');
+         url('Lucian Schoenschrift CAT-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
+    font-display: swap;
 }
 
