--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -27,7 +27,8 @@ body {
     color: #333;
     
     /* keeps horizontal scrollbars from appearing when items are animated to the left or right of the viewport */
-    overflow-x: hidden; 
+    
+    //overflow-x: hidden; 
 }
 
 section {
