--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -82,17 +82,17 @@
     }
     
     &__wrap:first-of-type {
-        transform: translateX(-150%);
+        //transform: translateX(-150%);
         opacity: 0;
     }
     
     &__wrap:nth-of-type(2) {
-        transform: translateY(150%);
+        //transform: translateY(150%);
         opacity: 0;
     }
     
     &__wrap:last-of-type {
-        transform: translateX(150%);
+        //transform: translateX(150%);
         opacity: 0;
     }
 
@@ -101,7 +101,7 @@
         position: relative;
         border-radius: 3px;
         box-shadow: 0 0 2px 2px rgba($grey-light-2,.3);
-        transition: transform 300ms ease-in;
+        //transition: transform 300ms ease-in;
     }
     
     &__image-wrap {
