--- a/scss/modules/_stats.scss
+++ b/scss/modules/_stats.scss
@@ -1,29 +1,29 @@
 
 .stats {
-    margin-top: 4em;
     background-color: #f0e7e7;
     background-image: url('../../img/elementor.svg');
     background-repeat: repeat-x;
     background-size: 80% 20%;
-    padding-top: 2em;
+    padding-top: 9em;
     padding-bottom: 2em;
+    
     
     &__grid {
         display: grid;
-        grid-template-columns: repeat(6, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-gap: 2em;
-        margin: 3em auto 1em auto;
+        margin: 0 auto 1em auto;
+        
+        padding-top: 0 !important;
     }
     
     &__wrap {
-        grid-column: 1 / 3;
-        padding: 1em;
-        align-self: center;
+        padding: 4em 0 3em 0;
     }
     
     &__heading {
-        margin-bottom: 1.5em; 
         color: $grey-dark-2;
+        text-align: center;
     }
     
     &__summary {
